# src/auth/auth.dto.ts
@@ -11,7 +11,3 @@ export interface ISignUp {
     pws: string;
     role: string
 }
-
-export interface IBadResponse {
-    reason: string;
-}
